--- a/stylesheet.css
+++ b/stylesheet.css
@@ -152,7 +152,7 @@ img {
     background-color: #3a3d40;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    /* justify-content: space-around; */
 }
 
 footer {
