--- a/stylesheets/form.css
+++ b/stylesheets/form.css
@@ -1,41 +1,70 @@
-label, button, select {
-    display: block;
-    margin: 7px auto;
-    width: 60%;
-  }
+label, select {
+  display: block;
+  width: 100%;
+}
   
-  body {
-    background-color: #1b1b32;
-      color: #f5f6f7;
-    text-align: center;
-  }
+body {
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
+  background-color: #1b1b32;
+  background-image: linear-gradient( 115deg, rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7) ), url(https://img.freepik.com/premium-photo/3d-customer-survey-data-analysis-background-rendered-image_18199-176.jpg?w=2000);
+  background-size: cover;
+  color: #f5f6f7;
+
+  margin-right: 30%;
+  margin-left: 30%;
+}
   
-  h1, p {
-    margin: 1em auto;
-    text-align: center;
-  }
-  
-  input [type="radio"] {
-    display: inline-block;
-  }
-  
-  input [type="text"] {
-    width: 100%;
-  }
-  
-  textarea {
-    border: 1px solid #0a0a23;
-    width: 100%;
-    height: 10%;
-  }
-  
-  input[type="text"] {
-    width: 35%;
-  }
-  
-  input[type="email"] {
-    width: 35%;
-  }
-  input[type="number"] {
-    width: 35%;
-  }
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background:rgba(27, 27, 50, 0.8);
+  padding: 1rem;
+  border:#f5f6f7 double;
+  height: 82vh;
+}
+
+h1, p {
+  text-align: center;
+  margin: 0;
+  padding-bottom: 1rem;
+}
+
+input {
+  width: 100%;
+  border-radius: 0.25rem;
+  border: 1px solid #ced4da;
+}
+
+input[type="radio"] {
+  width: auto;
+  margin: 0%;
+  padding-top: 1rem;
+
+}
+input[type="checkbox"] {
+  width: auto;
+}
+
+hr {
+  width: 100%;
+  border: 1px double;
+}
+
+textarea {
+  width: 100%;
+  height: 3rem;
+}
+
+button {
+  display: block;
+  width: 100%;
+  height: 2rem;
+  background-color: green;
+  color: inherit;
+  border: none;
+  cursor: pointer;
+  margin-top:1rem;
+}
