--- a/stylesheets/rcm.css
+++ b/stylesheets/rcm.css
@@ -1,88 +1,89 @@
-*   {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    vertical-align: baseline;}
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  vertical-align: baseline;
+}
 
 body {
-    background-color: #333;
-    color: #333;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 400;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  background-color: #333;
+  color: #333;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 #quote-box {
-    border-radius: 3px;
-    position: relative;
-    width: 450px;
-    padding: 40px 50px;
-    display: table;
-    background-color: #fff;
+  border-radius: 3px;
+  position: relative;
+  width: 450px;
+  padding: 40px 50px;
+  display: table;
+  background-color: #fff;
 }
 
 #quote-box #text {
-    text-align: center;
-    width: 450px;
-    height: auto;
-    clear: both;
-    font-weight: 500;
-    font-size: 1.75em;
+  text-align: center;
+  width: 450px;
+  height: auto;
+  clear: both;
+  font-weight: 500;
+  font-size: 1.75em;
 }
 
 #author {
   width: 450px;
-    height: auto;
-    clear: both;
-    padding-top: 20px;
-    font-size: 1em;
-    text-align: right;
+  height: auto;
+  clear: both;
+  padding-top: 20px;
+  font-size: 1em;
+  text-align: right;
 }
 
 div {
-    position: relative;
-    z-index: 2;
+  position: relative;
+  z-index: 2;
 }
 
 #new-quote {
   background-color: rgb(44, 62, 80);
   float: right;
   height: 38px;
-    border: none;
-    border-radius: 3px;
-    color: #fff;
-    outline: none;
-    font-size: 0.85em;
-    padding: 8px 18px 6px 18px;
-    margin-top: 30px;
-    opacity: 1;
-    cursor: pointer;
+  border: none;
+  border-radius: 3px;
+  color: #fff;
+  outline: none;
+  font-size: 0.85em;
+  padding: 8px 18px 6px 18px;
+  margin-top: 30px;
+  opacity: 1;
+  cursor: pointer;
 }
 
 #tweet-quote {
   background-color: rgb(44, 62, 80);
   float: left;
   height: 25px;
-   border: none;
-    border-radius: 3px;
-    color: #fff;
-    font-size: 0.85em;
-    padding: 8px 18px 0px 18px;
-    margin-top: 35px;
-    opacity: 1;
-    cursor: pointer;
+  border: none;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 0.85em;
+  padding: 8px 18px 0px 18px;
+  margin-top: 35px;
+  opacity: 1;
+  cursor: pointer;
   text-decoration: none;
 }
 
 .fa:hover {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 .fa-twitter {
-  background: #55ACEE;
+  background: #55acee;
   color: white;
 }
 
